--- a/package.json
+++ b/package.json
@@ -10,28 +10,8 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "seed": "node createDB.js"
+    "seed": "node server/createDB.js"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
-  }
-}
-
-
-
-{
-  "name": "github-fetcher-fullstack-v2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
-  },
-  "author": "Beth Johnson",
-  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
@@ -44,7 +24,6 @@
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "file-system": "^2.2.2",
-    "fs": "0.0.1-security",
     "jquery": "^3.1.1",
     "mongoose": "^4.13.17",
     "react": "^15.4.2",
