--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "seed": "node server/createDB.js"
+    "seed": "node db/createDB.js",
+    "test:client":  "jest ./client/dist/tests"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "jest": "^23.6.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
