--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js",
+    "dev": "webpack -d --watch",
+    "start": "nodemon server/index.js",
     "seed": "node db/createDB.js",
     "test:client": "jest --watchAll --expand --verbose"
   },
@@ -42,16 +42,17 @@
   },
   "dependencies": {
     "body-parser": "^1.17.0",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "file-system": "^2.2.2",
     "jquery": "^3.1.1",
     "mongoose": "^4.13.17",
     "react": "^16.6.0",
-    "react-test-renderer": "^16.6.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
-    "semantic-ui-react": "^0.83.0",
-    "request": "^2.81.0"
+    "react-test-renderer": "^16.6.1",
+    "request": "^2.81.0",
+    "semantic-ui-react": "^0.83.0"
   }
 }
